# prog_flash

./: .gitignore  README.md  pyproject.toml
.continue/rules/: project-setup.md
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  chore.md  feature.md  feature_request.md  research.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_teamplte.md
data/: flashcards.json
docs/: artchitecture.md
src/prog_flash/: __init__.py  card.py  deck.py  game.py  main.py  py.typed
tests/: conftest.py  test_card.py  test_game.py
