[project]
name = "prog-flash"
version = "0.1.0"
description = "A Flash card study program"
license = "GPL-3.0-only"
readme = "README.md"
authors = [
    { name = "Kyle Law", email = "dev@anzenketh.net" }
]
requires-python = ">=3.13"


dependencies = [
  "click==8.4.1"
]

[project.scripts]
prog-flash = "prog_flash:main"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[tool.ruff.format]
quote-style = "single"

[dependency-groups]

dev = [
  {include-group = "lint"},
  {include-group = "test"}
]
test = [
    "pytest>=9.0.3",
]
lint = [
    "ruff>=0.15.15",
]
